--- a/mysite03/src/main/webapp/assets/css/gallery.css
+++ b/mysite03/src/main/webapp/assets/css/gallery.css
@@ -3,13 +3,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Shizuru&display=swap');
 #gallery			{ margin:20px auto;	width:540px; }
 
+#gallery {
+	display: block;
+    content: "";
+    clear: both;
+}
+
 #gallery h1			{ width: 320px;
-					  height:40px;
+					  height:40px; /*용기 같은느낌*/
 					  background: url("/mysite03/assets/images/gallery.png") 0px 0px  no-repeat;
 					  background-size: 40px 40px;
-					  padding-left:50px;
+					  padding-left:50px;	
 					  float: left;
-					  font-family: 'Shizuru', cursive;										
+					  font-family: 'Shizuru', cursive;			
 					  
 					}
 #upload-image 		{	
@@ -18,7 +24,7 @@
 						width:90px;
 						height:20px;
 						border:2px solid #999;
-						font-size : 13px;
+						font-size : 12px;
 						text-align:center;
 						padding: 9px 9px;
 						text-decoration-line:none;
@@ -33,6 +39,8 @@
 						width:540px;
   				 		clear:both; 
 					}
+
+
 
 					
 #gallery ul li 		{
@@ -49,7 +57,7 @@
 					
 					
 #gallery ul li a.image {	
-	 						position:absolute;
+	 						position:relative;
 	 						top:5%;
 	 						left:5%;
 	 						
@@ -57,7 +65,8 @@
 							height:100px;
 							background-size: cover;
 							background-repeat: no-repeat;
-							background-position: center center;
+							background-position: center;
+							display: block;
 						}
 #gallery ul li a.del-button {
 	position:absolute;
